--- a/pages/main-page/scss/components/_slider.scss
+++ b/pages/main-page/scss/components/_slider.scss
@@ -41,7 +41,7 @@
     display: flex;
     transition-property: transform;
     transition-timing-function: var(--swiper-wrapper-transition-timing-function, initial);
-    box-sizing: content-box
+    box-sizing: content-box;
 }
 
 .swiper-android .swiper-slide,
