--- a/pages/main-page/scss/layouts/_info-resourses.scss
+++ b/pages/main-page/scss/layouts/_info-resourses.scss
@@ -24,11 +24,11 @@
     height: 60px;
 }
 
+.info-resourses__slider
 .swiper-slide {
     display: flex;
     align-items: center;
     justify-content: center;
-    box-sizing: content-box;
 }
 .slider__button {
     z-index: 2;
@@ -38,4 +38,12 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+.info-resourses__slider {
+    overflow: hidden;
+}
+
+.info-resourses .slider__wrapper {
+    display: flex;
 }
